# online_shop

./: ReadMe.md  data.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blog/templates/blog/includes/: inc_blog.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_category_created_at.py  0003_remove_category_created_at.py  0004_remove_product_last_updated_product_last_update_and_more.py  0005_alter_product_created_at_alter_product_last_update.py  0006_version.py  0007_product_user.py
catalog/templates/catalog/: base.html  catalog.html  category_list.html  contact.html  index.html  product.html  product_detail.html  product_form.html  product_list.html  product_update_form.html
catalog/templates/catalog/includes/: inc_card.html
catalog/templatetags/: media_path.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_country.py  0003_user_email_is_verified.py  0004_user_token.py
users/templates/users/: login.html  password_reset_done.html  password_reset_form.html  password_reset_sent.html  register.html  request_to_reset_password.html  reset_password.html  verification_failed.html  verification_pass.html  verify_email.html  verify_email_message.html
