[tool.poetry]
name = "online-shop"
version = "0.1.0"
description = ""
authors = ["korchaginks <kkonstantinserg@gmail.com>"]
readme = "README.md"
packages = [{include = "online_shop"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
psycopg2 = "^2.9.7"
python-dotenv = "^1.0.0"
shelter = "^2.4.0"
pillow = "^10.0.0"
ipython = "^8.15.0"
pytils = "^0.4.1"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
